if when entering your product you don't fill out a field it will tell you what you need to enter

--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -3,4 +3,4 @@
 <h3>Rating out of 5: <%= @review.rating %></h3>
 <h3>`<%= @review.content_body %></h3>
 
-<p><%= link_to "Return to product", product_opath(@product) %></p>
+<p><%= link_to "Return to product", product_path(@product) %></p>
