--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,5 +1,15 @@
 <h1>Add a new review:</h1>
 
+
+<% if @product.errors.any? %>
+  <h3>Please fix these errors:</h3>
+    <ul>
+      <% @product.errors.full_messages.each do |message|%>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+<% end %>
+
 <%= form_for [@product, @review] do |f|%>
   <%= f.label :author%>
   <%= f.text_field :author%>
@@ -7,4 +17,5 @@
   <%= f.text_area :content_body%>
   <%= f.label :rating%>
   <%= f.number_field :rating%>
+  <p><%= f.submit %></p>
 <% end %>
