able to add reviews to products and give an error message if a field is blank

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -8,16 +8,18 @@
   <% @product.reviews.each do |review| %>
     <ul>
       <li>
-        <h2>Reviewed by: <%= @review.author %></h2>
-        <h3>Rating out of 5: <%= @review.rating %></h3>
-        <h3><%= @review.content_body %></h3>
+        <h2>Reviewed by: <%= review.author %></h2>
+        <h3>Rating out of 5: <%= review.rating %></h3>
+        <h3><%= review.content_body %></h3>
       </li>
     </ul>
   <% end %>
 <% else %>
-  <p>No reviews are listed yet, <%= link_to "Add one here!", new_product_review_path(@product) %></p>
-  
+  <p>No reviews are listed yet!</p>
 <% end %>
+
+<p><%= link_to "Add a review here!", new_product_review_path(@product) %></p></p>
+
 
 <p><%= link_to "Edit", edit_product_path(@product) %></p>
 <p><%= link_to "Delete", product_path(@product),
