dry up reviews/new.html.erb with partial

--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,23 +1,3 @@
 <h1>Add a new review:</h1>
 
-
-<% if @review.errors.any? %>
-  <h3>Please fix these errors:</h3>
-    <ul>
-      <% @review.errors.full_messages.each do |message|%>
-        <li><%= message %></li>
-      <% end %>
-    </ul>
-<% end %>
-
-<%= form_for [@product, @review] do |f|%>
-  <%= f.label :author%>
-  <%= f.text_field :author%>
-  <%= f.label :content_body%>
-  <%= f.text_area :content_body%>
-  <%= f.label :rating%>
-  <%= f.number_field :rating%>
-  <p><%= f.submit %></p>
-<% end %>
-
-<p><%= link_to "Return to products", products_path %></p>
+<%= render "layouts/review_form" %>
