--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -10,4 +10,6 @@
   <p>There are no products yet.</p>
 <% end %>
 
+<%= link_to "Product with most reviews!", products_path(@products.most_reviews) %>
+
 <p><%= link_to "Create new product", new_product_path %></p>
