--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -17,6 +17,15 @@
 <p><%= link_to "#{Product.three_most_recent[1].name}", product_path(Product.three_most_recent[1]) %></p>
 <p><%= link_to "#{Product.three_most_recent[2].name}", product_path(Product.three_most_recent[2]) %></p>
 
-
+<% if @products.usa.any? %>
+  <p>These Products are made in the USA</p>
+  <ul>
+    <% @products.usa.each do |product|%>
+      <li><%= link_to product.name, product_path(product) %></li>
+    <% end %>
+  </ul>
+<% else %>
+  <p>There are no American made products yet.</p>
+<% end %>
 
 <p><%= link_to "Create new product", new_product_path %></p>
