faker currently creates 50 fake products

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -10,7 +10,11 @@
   <p>There are no products yet.</p>
 <% end %>
 
-<p><%= link_to "Product with most reviews!", product_path(Product.most_reviews[0]) %></p>
+<% if Product.most_reviews[0] %>
+  <p><%= link_to "#{Product.most_reviews[0].name} currently has the most reviews", product_path(Product.most_reviews[0]) %></p>
+<% else %>
+  <p>Currently all products have the same number of reviews, add one to see the most reviewed item!</p>
+<% end %>
 
 <p>The 3 newest products are:</p>
 <p><%= link_to "#{Product.three_most_recent[0].name}", product_path(Product.three_most_recent[0]) %></p>
