authentication for making posts as user and creating product as admin

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Welcome to Mario's doos stuffs!</h1>
+<h1>Welcome to Mario's food stuffs!</h1>
 
 <h4>Here's what's new, what people are talking about, and how to look at all of our peoducts.</h4>
 
@@ -26,5 +26,5 @@
 <% end %>
 
 
-<p><%= link_to "Return to products", products_path %></p>
+<p><%= link_to "Show products", products_path %></p>
 
