--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -42,6 +42,8 @@
 <% else %>
   <p>There are no American made products yet.</p>
 <% end %>
-
-<p><%= link_to "Create new product", new_product_path %></p>
+<% if current_user && current_user.admin %>
+  <p><%= link_to "Create new product", new_product_path %></p>
+<% else %>
+<% end %>
 
